<resources>
    <string name="app_name">曰抱</string>
    <string name="splash_image">Splash Image</string>
    <string name="home">首页</string>
    <string name="toolbar_message">消息提示</string>
    <string name="toolbar_setting">系统设置</string>
    <string name="toolbar_night">夜间模式</string>
    <string name="username">用户名</string>
    <string name="account_favorite">我的收藏</string>
    <string name="offline_download">离线下载</string>
    <string name="editors">主编</string>
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="comments">回复</string>
    <string name="zan">赞</string>
    <string name="save">保存</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="comment_empty_long">深度长评虚位以待</string>
    <string name="loading">请稍候……</string>
    <string name="clipboard_success">复制成功</string>
    <string name="report_title">举报</string>
    <string name="report_msg">太好了 我们一起净化评论区</string>
    <string name="cancel">取消</string>
    <string name="report_confirm">确认举报</string>
    <string name="count_long_comments">条长评</string>
    <string name="count_short_comments">条短评</string>
    <string name="reply">回复</string>
    <string name="comment_publish">发表评论</string>
    <string name="count_comments">条点评</string>
    <string name="comment_write">写点评</string>
    <string name="comment_publish_hint">不友善言论会被删除，深度讨论会优先展示。</string>
    <string name="comment_share">同时分享到:</string>
    <string name="content_cannot_null">内容不能为空！</string>
    <string name="sina">sina</string>
    <string name="tencent">tencent</string>

    <item name="tag_type" type="id"/>
    <item name="tag_position" type="id"/>
    <item name="tag_content" type="id"/>
</resources>
