<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="@dimen/x300"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_back"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="@dimen/x300"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/iv_themes_avatar"
                android:layout_width="@dimen/x20"
                android:layout_height="@dimen/x20"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/x10"
                android:scaleType="centerCrop"
                android:src="@drawable/menu_avatar"/>

            <TextView
                android:id="@+id/tv_themes_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/iv_themes_avatar"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="@dimen/x17"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="@dimen/x300"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/x20"
            android:paddingRight="@dimen/x20">

            <TextView
                android:paddingRight="@dimen/x18"
                android:id="@+id/iv_themes_favor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:drawableLeft="@drawable/favorites"
                android:gravity="center"
                android:text="@string/account_favorite"
                android:textColor="@color/white"
                android:textSize="@dimen/x15"
                android:textStyle="bold"/>

            <TextView
                android:paddingLeft="@dimen/x18"
                android:id="@+id/iv_themes_download"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/download"
                android:gravity="center"
                android:text="@string/offline_download"
                android:textColor="@color/white"
                android:textSize="@dimen/x15"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>


</layout>